@@ -1,38 +1,38 @@
 // $Id$
-// This file is generated with "generate_component_mpc.pl -l ../lib -o ../lib -p Hello_Base Receiver"
+// This file is generated with "generate_component_mpc.pl -e -l ../lib -o ../lib -p Hello_Base Receiver"
 
-project(Hello_Base_Receiver_idl_gen) : componentidldefaults {
+project(Hello_Base_Receiver_idl_gen) : componentidldefaults, avoids_ccm_noevent {
   custom_only = 1
-
+  
   idlflags += -Wb,stub_export_macro=RECEIVER_STUB_Export \
               -Wb,stub_export_include=Receiver_stub_export.h \
               -Wb,skel_export_macro=RECEIVER_SVNT_Export \
               -Wb,skel_export_include=Receiver_svnt_export.h \
               -Wb,exec_export_macro=RECEIVER_EXEC_Export \
               -Wb,exec_export_include=Receiver_exec_export.h \
-              -Gxhex -Gxhsk -Gxhst
+              -Gxhex -Gxhsk -Gxhst 
 
   IDL_Files {
     Receiver.idl
   }
 }
 
-project(Hello_Base_Receiver_lem_gen) : ciaoidldefaults {
+project(Hello_Base_Receiver_lem_gen) : ciaoidldefaults, avoids_ccm_noevent {
   after += Hello_Base_Receiver_idl_gen
   custom_only = 1
   idlflags += -Wb,stub_export_macro=RECEIVER_LEM_STUB_Export \
               -Wb,stub_export_include=Receiver_lem_stub_export.h \
-              -SS -Gxhst
+              -SS -Gxhst 
 
   IDL_Files {
     ReceiverE.idl
   }
 }
 
-project(Hello_Base_Receiver_lem_stub) : ccm_svnt {
+project(Hello_Base_Receiver_lem_stub) : ccm_svnt, avoids_ccm_noevent {
   after += Hello_Base_Receiver_lem_gen Hello_Base_Receiver_stub Hello_Base_stub Hello_Base_lem_stub
   libs  += Hello_Base_stub Hello_Base_lem_stub Receiver_stub
-
+  
   libpaths += ../lib
   libout = ../lib
   sharedname = Receiver_lem_stub
@@ -55,10 +55,10 @@ project(Hello_Base_Receiver_lem_stub) : ccm_svnt {
   }
 }
 
-project(Hello_Base_Receiver_stub) : ccm_stub {
+project(Hello_Base_Receiver_stub) : ccm_stub, avoids_ccm_noevent {
   after += Hello_Base_Receiver_idl_gen Hello_Base_stub Hello_Base_lem_stub
   libs  += Hello_Base_stub Hello_Base_lem_stub
-
+  
   libpaths += ../lib
   libout = ../lib
   sharedname = Receiver_stub
@@ -81,11 +81,11 @@ project(Hello_Base_Receiver_stub) : ccm_stub {
   }
 }
 
-project(Hello_Base_Receiver_exec) : ciao_executor {
+project(Hello_Base_Receiver_exec) : ciao_executor, avoids_ccm_noevent {
   after   += Hello_Base_lem_stub Hello_Base_Receiver_lem_stub Hello_Base_Receiver_stub
   sharedname = Receiver_exec
   libs += Hello_Base_lem_stub Receiver_stub Receiver_lem_stub Hello_Base_stub Hello_Base_lem_stub
-
+  
   libpaths += ../lib
   libout = ../lib
   dynamicflags += RECEIVER_EXEC_BUILD_DLL
@@ -107,18 +107,18 @@ project(Hello_Base_Receiver_exec) : ciao_executor {
 }
 
 
-project(Hello_Base_Receiver_svnt) : ciao_servant  {
+project(Hello_Base_Receiver_svnt) : ciao_servant, avoids_ccm_noevent  {
   after      += Hello_Base_skel Hello_Base_lem_stub  Hello_Base_Receiver_lem_stub
   sharedname  = Receiver_svnt
   libs       += Receiver_stub Receiver_lem_stub  \
                 Hello_Base_skel \
                 Hello_Base_stub \
                 Hello_Base_lem_stub
-
+  
   libpaths += ../lib
   libout = ../lib
   dynamicflags += RECEIVER_SVNT_BUILD_DLL
-
+  
   IDL_Files {
   }
 
