@@ -1,38 +1,38 @@
 // $Id$
-// This file is generated with "generate_component_mpc.pl -c starter -l ../lib -o ../lib -p Hello_Base Sender"
+// This file is generated with "generate_component_mpc.pl -e -l ../lib -o ../lib -c starter -p Hello_Base Sender"
 
-project(Hello_Base_Sender_idl_gen) : componentidldefaults {
+project(Hello_Base_Sender_idl_gen) : componentidldefaults, avoids_ccm_noevent {
   custom_only = 1
-
+  
   idlflags += -Wb,stub_export_macro=SENDER_STUB_Export \
               -Wb,stub_export_include=Sender_stub_export.h \
               -Wb,skel_export_macro=SENDER_SVNT_Export \
               -Wb,skel_export_include=Sender_svnt_export.h \
               -Wb,exec_export_macro=SENDER_EXEC_Export \
               -Wb,exec_export_include=Sender_exec_export.h \
-              -Gxhex -Gxhsk -Gxhst
+              -Gxhex -Gxhsk -Gxhst 
 
   IDL_Files {
     Sender.idl
   }
 }
 
-project(Hello_Base_Sender_lem_gen) : ciaoidldefaults {
+project(Hello_Base_Sender_lem_gen) : ciaoidldefaults, avoids_ccm_noevent {
   after += Hello_Base_Sender_idl_gen
   custom_only = 1
   idlflags += -Wb,stub_export_macro=SENDER_LEM_STUB_Export \
               -Wb,stub_export_include=Sender_lem_stub_export.h \
-              -SS -Gxhst
+              -SS -Gxhst 
 
   IDL_Files {
     SenderE.idl
   }
 }
 
-project(Hello_Base_Sender_lem_stub) : ccm_svnt {
+project(Hello_Base_Sender_lem_stub) : ccm_svnt, avoids_ccm_noevent {
   after += Hello_Base_Sender_lem_gen Hello_Base_Sender_stub Hello_Base_stub Hello_Base_lem_stub
   libs  += Hello_Base_stub Hello_Base_lem_stub Sender_stub
-
+  
   libpaths += ../lib
   libout = ../lib
   sharedname = Sender_lem_stub
@@ -55,10 +55,10 @@ project(Hello_Base_Sender_lem_stub) : ccm_svnt {
   }
 }
 
-project(Hello_Base_Sender_stub) : ccm_stub {
+project(Hello_Base_Sender_stub) : ccm_stub, avoids_ccm_noevent {
   after += Hello_Base_Sender_idl_gen Hello_Base_stub Hello_Base_lem_stub
   libs  += Hello_Base_stub Hello_Base_lem_stub
-
+  
   libpaths += ../lib
   libout = ../lib
   sharedname = Sender_stub
@@ -81,11 +81,11 @@ project(Hello_Base_Sender_stub) : ccm_stub {
   }
 }
 
-project(Hello_Base_Sender_exec) : ciao_executor {
+project(Hello_Base_Sender_exec) : ciao_executor, avoids_ccm_noevent {
   after   += Hello_Base_lem_stub Hello_Base_Sender_lem_stub Hello_Base_Sender_stub
   sharedname = Sender_exec
   libs += Hello_Base_lem_stub Sender_stub Sender_lem_stub Hello_Base_stub Hello_Base_lem_stub
-
+  
   libpaths += ../lib
   libout = ../lib
   dynamicflags += SENDER_EXEC_BUILD_DLL
@@ -107,18 +107,18 @@ project(Hello_Base_Sender_exec) : ciao_executor {
 }
 
 
-project(Hello_Base_Sender_svnt) : ciao_servant  {
+project(Hello_Base_Sender_svnt) : ciao_servant, avoids_ccm_noevent  {
   after      += Hello_Base_skel Hello_Base_lem_stub  Hello_Base_Sender_lem_stub
   sharedname  = Sender_svnt
   libs       += Sender_stub Sender_lem_stub  \
                 Hello_Base_skel \
                 Hello_Base_stub \
                 Hello_Base_lem_stub
-
+  
   libpaths += ../lib
   libout = ../lib
   dynamicflags += SENDER_SVNT_BUILD_DLL
-
+  
   IDL_Files {
   }
 
@@ -138,11 +138,11 @@ project(Hello_Base_Sender_svnt) : ciao_servant  {
   }
 }
 
-project (Hello_Base_starter) : ccm_stub, valuetype  {
+project (Hello_Base_starter) : ccm_stub, valuetype, avoids_ccm_noevent  {
   exename = starter
   after += Hello_Base_Sender_stub
   libs  += Sender_stub Hello_Base_stub Hello_Base_lem_stub
-
+  
   libpaths += ../lib
   exeout = ../lib
   IDL_Files {
